--- a/package.json
+++ b/package.json
@@ -13,17 +13,19 @@
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.10",
     "@babel/preset-react": "^7.12.10",
-    "babel-runtime": "^6.26.0",
     "babel-loader": "^8.2.2",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-runtime": "^6.26.0",
     "webpack": "^5.10.1",
     "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
     "copy-webpack-plugin": "^8.1.1",
+    "css-loader": "^6.8.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "style-loader": "^3.3.3"
   }
 }
