--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "copy-webpack-plugin": "^8.1.1",
     "css-loader": "^6.8.1",
     "file-loader": "^6.2.0",
+    "node-sass": "^7.0.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^6.3.0",
+    "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3"
   }
 }
